# wol-redirect-proxy

./: .gitignore  README.md  app.py  example-config.yaml  install.sh  pyproject.toml  requirements.txt  sample-systemd.unit
src/wol_proxy/: app.py
